# mrmc-platform

./: CMakeLists.txt  mrmcplatform-config.cmake.in  mrmcplatform.pc.in
